   * Fixed team selection screen often ignoring attempts to scroll (bug #1632).
   * Input Method Editor support in most textboxes (except in-game chat)
 * Miscellaneous and Bug Fixes:
   * Add --report/-R command line switch for printing the same report from the
     Game Version dialog's clipboard function to stdout.
 * WFL Engine
   * Add owner key to terrain space callable, for villages
 * WML Engine
   * If ai_algorithm is used in [modify_side][ai], it now replaces the whole AI
     with the contents of [modify_side][ai], instead of appending these parameters.
   * New [credits_group] tag can be used by non-campaign addons to group several
     [about] tags under a single header. This is a toplevel tag, not a subtag
	 of [era] or [modification].
   * An empty id key in SUF no longer matches all units; instead, it matches none.
   * Fix [primary_attack] and [secondary_attack] in [kill]
   * Fix [kill] not affecting recall list units
   * Fix [scroll] with omitted x or y
   * Fix [story] not showing if all parts are conditional
   * Fix some hotkeys not working (issues #1737 and #1769)
   * New vision_cost and jamming_cost keys in SUF
   * Integer SUF keys (eg level) now accept a list of ranges
   * Fix $other_unit variable in SUF not being available in nested [and] [or] [not]

Version 1.13.8:
  * Campaigns:
   * Son of the Black-Eye:
     * Balancing changes for 'Silent Forest'.
   * Under the Burning Suns:
     * New sprites for Quenoth Youth (Kaleh and Nym) and Human Commander.
     * Applied a color shift to the human units in S8 and S9 to give them a more
       unique look.
 * Editor:
   * Fixed a crash when placing units.
   * Restored the ability to preview different ToDs. Note this still does not
     work when invoked form the Custom ToD window.
   * Fixed editor sides not having the correct side number.
   * Redesigned Windows, Areas, and Sides menus.
   * The Windows menu will now display maps starting from 1 rather than 0.