@@ -39,13 +39,37 @@ public:
 	terrain_filter(const terrain_filter &other);
 	terrain_filter& operator=(const terrain_filter &other);
 
-	//match: returns true if and only if the given location matches this filter
-	bool match(const map_location& loc) const;
+	/// @param loc The location to test
+	/// @returns true if and only if the given location matches this filter
+	bool match(const map_location& loc) const {
+		return match_impl(loc, nullptr);
+	}
+
+	/// @param loc The location to test
+	/// @param ref_unit A reference unit for the $teleport_unit auto-stored variable
+	/// @param unit_loc The reference unit's apparent location for this filter
+	/// @returns true if and only if the given location matches this filter
+	bool match(const map_location& loc, const unit& ref_unit) const {
+		return match_impl(loc, &ref_unit);
+	}
+
 	virtual bool operator()(const map_location& loc) const { return this->match(loc); }
 
-	//get_locations: gets all locations on the map that match this filter
-	// @param locs - out parameter containing the results
-	void get_locations(std::set<map_location>& locs, bool with_border=false) const;
+	/// gets all locations on the map that match this filter
+	/// @param[out] locs set to store the results in
+	/// @param[in] with_border whether to include the borders
+	void get_locations(std::set<map_location>& locs, bool with_border=false) const {
+		return get_locs_impl(locs, nullptr, with_border);
+	}
+
+	/// gets all locations on the map that match this filter
+	/// @param[out] locs set to store the results in
+	/// @param[in] with_border whether to include the borders
+	/// @param[in] ref_unit A reference unit for the $teleport_unit auto-stored variable
+	/// @param[in] unit_loc The reference unit's apparent location for this filter
+	void get_locations(std::set<map_location>& locs, const unit& ref_unit, bool with_border=false) const {
+		return get_locs_impl(locs, &ref_unit, with_border);
+	}
 
 	//restrict: limits the allowed radius size and also limits nesting
 	// The purpose to limit the time spent for WML handling
@@ -58,7 +82,9 @@ public:
 	config to_config() const;
 	friend class terrain_filterimpl;
 private:
-	bool match_internal(const map_location& loc, const bool ignore_xy) const;
+	bool match_impl(const map_location& loc, const unit* ref_unit) const;
+	void get_locs_impl(std::set<map_location>& locs, const unit* ref_unit, bool with_border) const;
+	bool match_internal(const map_location& loc, const unit* ref_unit, const bool ignore_xy) const;
 
 	const vconfig cfg_; //config contains WML for a Standard Location Filter
 	const filter_context * fc_;
