@@ -34,6 +34,7 @@ Version 1.13.8+dev:
      Game Version dialog's clipboard function to stdout.
  * WFL Engine
    * Add owner key to terrain space callable, for villages
+   * Location formulas in [tunnel] now have a teleport_unit variable
  * WML Engine
    * If ai_algorithm is used in [modify_side][ai], it now replaces the whole AI
      with the contents of [modify_side][ai], instead of appending these parameters.
